# task-tracker-clean-architecture

./: LICENSE  README.md  pyproject.toml
src/controllers/: in_memory.py
src/details/: id_generator.py
src/entities/: task.py
src/repositories/: in_memory.py
src/scenarios/: change_task_status.py  create_task.py  delete_task.py  get_task_description.py  update_status.py
src/tracker/scenarios/: create_task.py  get_task_description.py
src/views/: command.py  command_pattern.py  handler.py
tests/details/: test_id_generator.py  test_singleton.py
tests/repositories/: test_in_memory.py
tests/scenarios/: test_create_task.py  test_delete_task.py  test_get_task_description.py  test_update_status.py
tests/test_view/: test_command_pattern.py  test_command_pattern_factory.py
tests/tracker/scenarios/: test_create_task.py  test_get_task_description.py
