[tool.poetry]
name = "task-tracker-clean-architecture"
version = "0.1.0"
description = ""
authors = ["Vasilii Kuimov <vasilykuimov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
